--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+aplicacao/contest/.metadata
+aplicacao/contest/.settings
+aplicacao/contest/.classpath
+aplicacao/contest/.project
+aplicacao/contest/bin
+aplicacao/contest/target
+aplicacao/contest/.springBeans
+aplicacao/contest/.mvn
+aplicacao/contest/mvnw*
+
+*.log
