--- a/aplicacao/contest/pom.xml
+++ b/aplicacao/contest/pom.xml
@@ -33,6 +33,18 @@
 
 	<dependencies>
 		<dependency>
+	        <groupId>info.cukes</groupId>
+	        <artifactId>cucumber-java</artifactId>
+	        <version>1.2.4</version>
+	    </dependency>
+	    
+	    <dependency>
+	        <groupId>info.cukes</groupId>
+	        <artifactId>cucumber-junit</artifactId>
+	        <version>1.2.4</version>
+    	</dependency>
+    
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
