Adicionada baseline de criacao do banco de dados pelo flyway

--- a/aplicacao/contest/pom.xml
+++ b/aplicacao/contest/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>ufc.quixada.npi</groupId>
 	<artifactId>contest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>contest</name>
 	<description>Sistema de controle de eventos de submissão</description>
@@ -39,12 +39,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-tomcat</artifactId>
-				</exclusion>
-			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
