--- a/aplicacao/contest/src/main/resources/application.properties
+++ b/aplicacao/contest/src/main/resources/application.properties
@@ -14,3 +14,7 @@ ldap.base=dc=quixada,dc=ufc,dc=br
 ldap.user=cn=admin_npi,ou=people_teste,dc=quixada,dc=ufc,dc=br
 ldap.password=!@admin_npi!@
 ldap.ou=ou=people_teste
+
+spring.messages.basename=messages/messages
+spring.messages.cache-seconds=-1
+spring.messages.encoding=UTF-8
