--- a/aplicacao/contest/pom.xml
+++ b/aplicacao/contest/pom.xml
@@ -101,7 +101,14 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 		</dependency>
-
+		
+		<!-- LDAP -->
+		<dependency>
+			<groupId>br.ufc.quixada.npi</groupId>
+			<artifactId>npi-ldap</artifactId>
+			<version>${npi.ldap.version}</version>
+		</dependency>
+		
 		<!-- Webjars -->
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
