Funcionalidade Adicionar Evento integrado com View e testes funcionando

--- a/aplicacao/contest/pom.xml
+++ b/aplicacao/contest/pom.xml
@@ -126,6 +126,10 @@
 		    <artifactId>font-awesome</artifactId>
 		    <version>${font.awesome.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc-portlet</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
