Controlado editar feito mas sem testes

--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -5,3 +5,4 @@ PESSOA_NAO_ENCONTRADA=Pessoa não encontrada
 NOME_EVENTO_VAZIO_ERROR=O nome do evento deve ser informado
 EVENTO_INATIVO_EXCLUIDO_SUCESSO=Evento inativo excluído com sucesso
 EVENTO_INATIVO_EXCLUIDO_ERRO=Evento não encontrado
+EVENTO_NAO_EXISTE=Evento não existe
