--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -6,3 +6,5 @@ NOME_EVENTO_VAZIO_ERROR=O nome do evento deve ser informado
 EVENTO_INATIVO_EXCLUIDO_SUCESSO=Evento inativo excluído com sucesso
 EVENTO_INATIVO_EXCLUIDO_ERRO=Evento não encontrado
 EVENTO_NAO_EXISTE=Evento não existe
+EVENTO_CADASTRADO_COM_SUCESSO=Evento cadastrado com sucesso
+EVENTO_EDITADO_COM_SUCESSO=Evento editado com sucesso
