--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -8,3 +8,5 @@ EVENTO_INATIVO_EXCLUIDO_ERRO=Evento não encontrado
 EVENTO_NAO_EXISTE=Evento não existe
 EVENTO_CADASTRADO_COM_SUCESSO=Evento cadastrado com sucesso
 EVENTO_EDITADO_COM_SUCESSO=Evento editado com sucesso
+ERRO_NAS_DATAS=Datas informadas com erro
+EVENTO_DESCRICAO_ERRO=Campos Descricao é obrigatório
