Alterado Query de Revisao e Submissao repository Alteração na view de editar evento

--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -12,3 +12,4 @@ ERRO_DATA_SUBMISSAO_INICIAL=Data de submissão inicial foi informada errada
 ERRO_DATA_SUBMISSAO_FINAL=Data de submissão final foi informada errada
 ERRO_DATA_REVISAO_INICIAL=Data de revisão inicial foi informada errada
 ERRO_DATA_REVISAO_FINAL=Data de revisão final foi informada errada
+ERRO_CAMPOS_EVENTO_NULL=Foram deixados campos em branco
