Controller Autor adicionado

--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -2,6 +2,7 @@ LOGIN_INVALIDO=Usuário e/ou senha inválidos
 LOGOUT_SUCESSO=Sua sessão foi finalizada
 ORGANIZADOR_VAZIO_ERROR=O organizador do evento deve ser informado
 PESSOA_NAO_ENCONTRADA=Pessoa não encontrada
+ID_EVENTO_VAZIO_ERROR=O evento deve ser informado
 NOME_EVENTO_VAZIO_ERROR=O nome do evento deve ser informado
 EVENTO_INATIVO_EXCLUIDO_SUCESSO=Evento inativo excluído com sucesso
 EVENTO_INATIVO_EXCLUIDO_ERRO=Evento não encontrado
@@ -9,4 +10,7 @@ EVENTO_NAO_EXISTE=Evento não existe
 EVENTO_CADASTRADO_COM_SUCESSO=Evento cadastrado com sucesso
 EVENTO_EDITADO_COM_SUCESSO=Evento editado com sucesso
 ERRO_NAS_DATAS=Datas informadas com erro
+PARTICIPAR_EVENTO_INATIVO=Nao e permitido participar de um evento inativo
 EVENTO_DESCRICAO_ERRO=Campos Descricao é obrigatório
+PARTICIPAR_EVENTO_INATIVO=Nao e permitido participar de um evento inativo
+PARTICAPAR_EVENTO_SUCESSO=Sua participacao foi efetivada
