--- a/aplicacao/contest/pom.xml
+++ b/aplicacao/contest/pom.xml
@@ -135,6 +135,10 @@
 			<artifactId>scala-library</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-undertow</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
