--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -19,3 +19,4 @@ ERRO_DATA_SUBMISSAO_FINAL=Data de submissão final foi informada errada
 ERRO_DATA_REVISAO_INICIAL=Data de revisão inicial foi informada errada
 ERRO_DATA_REVISAO_FINAL=Data de revisão final foi informada errada
 ERRO_CAMPOS_EVENTO_NULL=Foram deixados campos em branco
+NAO_HA_TRABALHOS=Não há trabalhos submetidos em nenhum evento
