1#	Cadastro de trilha com mensagem de erro finalizado.

--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -10,3 +10,4 @@ EVENTO_CADASTRADO_COM_SUCESSO=Evento cadastrado com sucesso
 EVENTO_EDITADO_COM_SUCESSO=Evento editado com sucesso
 ERRO_NAS_DATAS=Datas informadas com erro
 EVENTO_DESCRICAO_ERRO=Campos Descricao é obrigatório
+TRILHA_NOME_JA_EXISTE="Essa trilha já existe"
