--- a/aplicacao/contest/pom.xml
+++ b/aplicacao/contest/pom.xml
@@ -148,6 +148,14 @@
 			<artifactId>hadoop-core</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		
+		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        
 	</dependencies>
 
 	<build>
