--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -2,7 +2,7 @@ LOGIN_INVALIDO=Usuário e/ou senha inválidos
 LOGOUT_SUCESSO=Sua sessão foi finalizada
 ORGANIZADOR_VAZIO_ERROR=O organizador do evento deve ser informado
 PESSOA_NAO_ENCONTRADA=Pessoa não encontrada
-ID_EVENTO_VAZIO_ERROR=O evento deve ser informado
+ID_EVENTO_VAZIO_ERROR=O Evento não existe
 NOME_EVENTO_VAZIO_ERROR=O nome do evento deve ser informado
 EVENTO_INATIVO_EXCLUIDO_SUCESSO=Evento inativo excluído com sucesso
 EVENTO_INATIVO_EXCLUIDO_ERRO=Evento não encontrado
