--- a/aplicacao/contest/src/main/resources/application.properties
+++ b/aplicacao/contest/src/main/resources/application.properties
@@ -18,3 +18,6 @@ ldap.ou=ou=people_teste
 spring.messages.basename=ValidationMessages
 spring.messages.cache-seconds=-1
 spring.messages.encoding=UTF-8
+
+spring.http.multipart.max-file-size=128KB
+spring.http.multipart.max-request-size=128KB
