-Removido campo @NotEmpty do CPF -Criado sql para atualizar o flyway

--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -20,8 +20,8 @@ ERRO_DATA_REVISAO_INICIAL=Data de revisão inicial foi informada errada
 ERRO_DATA_REVISAO_FINAL=Data de revisão final foi informada errada
 ERRO_CAMPOS_EVENTO_NULL=Foram deixados campos em branco
 NAO_HA_TRABALHOS=Não há trabalhos submetidos em nenhum evento
-NOME_DO_TRABALHO_VAZIO=O nome do trabalho está em branco
+NOME_DO_TRABALHO_VAZIO=O titulo do trabalho está em branco
 TRABALHO_INVALIDO= O trabalho enviado está inválido
-ARQUIVO_VAZIO= "Não há nada no armazenamento"
-FALHA_AO_LER_ARQUIVO = "Houve falha na leitura do arquivo"
+ARQUIVO_VAZIO= Não há nada no armazenamento
+FALHA_AO_LER_ARQUIVO = Houve falha na leitura do arquivo
 FORMATO_ARQUIVO_INVALIDO = O arquivo enviado deve ser .pdf
