--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -25,3 +25,9 @@ TRABALHO_INVALIDO= O trabalho enviado está inválido
 ARQUIVO_VAZIO= Não há nada no armazenamento
 FALHA_AO_LER_ARQUIVO = Houve falha na leitura do arquivo
 FORMATO_ARQUIVO_INVALIDO = O arquivo enviado deve ser .pdf
+TRABALHO_ENVIADO = Trabalho cadastrado com sucesso no sistema
+PESSOA_INVALIDA = Pessoa não cadastrada no sistema
+CAMPOS_VAZIOS = Há campos referente ao orientador vazio
+EMAIL_NULL = O campo email não foi preenchido
+PESSOA_NULL = O campo nome não foi preenchido
+ERRO_CADASTRO_TRABALHO = Não foi possível cadastrar o trabalho tente novamente
