--- a/aplicacao/contest/src/main/resources/application.properties
+++ b/aplicacao/contest/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.messages.basename=ValidationMessages
 spring.messages.cache-seconds=-1
 spring.messages.encoding=UTF-8
 
-spring.http.multipart.max-file-size=128KB
-spring.http.multipart.max-request-size=128KB
+spring.http.multipart.max-file-size=5Mb 
+spring.http.multipart.max-request-size=5Mb
