--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -20,3 +20,4 @@ ERRO_DATA_REVISAO_INICIAL=Data de revisão inicial foi informada errada
 ERRO_DATA_REVISAO_FINAL=Data de revisão final foi informada errada
 ERRO_CAMPOS_EVENTO_NULL=Foram deixados campos em branco
 NAO_HA_TRABALHOS=Não há trabalhos submetidos em nenhum evento
+ERRO_ENVIO_EMAIL = Erro ao enviar email
