Adicionado limite no aplication.properties

--- a/aplicacao/contest/src/main/resources/application.properties
+++ b/aplicacao/contest/src/main/resources/application.properties
@@ -19,5 +19,6 @@ spring.messages.basename=ValidationMessages
 spring.messages.cache-seconds=-1
 spring.messages.encoding=UTF-8
 
+multipart.maxFileSize= 5Mb
 spring.http.multipart.max-file-size=5Mb 
 spring.http.multipart.max-request-size=5Mb
