--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -39,3 +39,5 @@ ERRO_CADASTRO_TRABALHO = Não foi possível cadastrar o trabalho tente novamente
 FORA_DA_DATA_DE_SUBMISSAO = Voce está enviando um arquivo fora do prazo de submissao
 NAO_HA_TRABALHOS=Não há trabalhos submetidos em nenhum evento
 SESSAO_EXPIRADA=Desculpe, sua sessão expirou
+TRABALHO_EXCLUIDO_COM_SUCESSO=Trabalho excluido com sucesso
+ERRO_EXCLUIR_TRABALHO = Não foi possivel excluir o trabalho
