--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -11,7 +11,7 @@ EVENTO_CADASTRADO_COM_SUCESSO=Evento cadastrado com sucesso
 EVENTO_EDITADO_COM_SUCESSO=Evento editado com sucesso
 ERRO_NAS_DATAS=Datas informadas com erro
 EVENTO_DESCRICAO_ERRO=Campos Descricao é obrigatório
-TRILHA_NOME_JA_EXISTE="Essa trilha já existe"
+TRILHA_NOME_JA_EXISTE=Essa trilha já existe
 PARTICIPAR_EVENTO_INATIVO=Nao e permitido participar de um evento inativo
 EVENTO_DESCRICAO_ERRO=Campos Descricao é obrigatório
 PARTICIPAR_EVENTO_INATIVO=Nao e permitido participar de um evento inativo
@@ -41,3 +41,4 @@ NAO_HA_TRABALHOS=Não há trabalhos submetidos em nenhum evento
 SESSAO_EXPIRADA=Desculpe, sua sessão expirou
 TRABALHO_EXCLUIDO_COM_SUCESSO=Trabalho excluido com sucesso
 ERRO_EXCLUIR_TRABALHO = Não foi possivel excluir o trabalho
+FORA_DO_PRAZO_SUBMISSAO = O trabalho so pode ser excluido se estiver dentro do prazo de submissão
