-adicionado fragments nas views -add mensagem de feedback ao add trilha

--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -42,3 +42,4 @@ SESSAO_EXPIRADA=Desculpe, sua sessão expirou
 TRABALHO_EXCLUIDO_COM_SUCESSO=Trabalho excluido com sucesso
 ERRO_EXCLUIR_TRABALHO = Não foi possivel excluir o trabalho
 FORA_DO_PRAZO_SUBMISSAO = O trabalho so pode ser excluido se estiver dentro do prazo de submissão
+TRILHA_ADD_COM_SUCESSO = Trilha adicionada com sucesso
