--- a/aplicacao/contest/pom.xml
+++ b/aplicacao/contest/pom.xml
@@ -165,6 +165,13 @@
 			<artifactId>telnetd-x</artifactId>
 			<version>2.1.1</version>
 		</dependency>
+		
+		<!-- JSON -->
+		<dependency>
+    		<groupId>org.json</groupId>
+   			<artifactId>json</artifactId>
+    		<version>20160810</version>
+		</dependency>
 	</dependencies>
 
 	<build>
