--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -6,7 +6,7 @@ ID_EVENTO_VAZIO_ERROR=O Evento não existe
 NOME_EVENTO_VAZIO_ERROR=O nome do evento deve ser informado
 EVENTO_INATIVO_EXCLUIDO_SUCESSO=Evento inativo excluído com sucesso
 EVENTO_INATIVO_EXCLUIDO_ERRO=Evento não encontrado
-EVENTO_NAO_EXISTE=Evento não existe
+EVENTO_NAO_EXISTE=Evento requisitado não existe
 EVENTO_CADASTRADO_COM_SUCESSO=Evento cadastrado com sucesso
 EVENTO_EDITADO_COM_SUCESSO=Evento editado com sucesso
 ERRO_NAS_DATAS=Datas informadas com erro
@@ -27,10 +27,12 @@ TRILHA_POSSUI_TRABALHO= A trilha possui trabalho cadastrado.
 EVENTO_VAZIO_OU_TEM_TRABALHO=Evento não existe ou a trilha possui trabalhos cadastrados
 NOME_DO_TRABALHO_VAZIO=O titulo do trabalho está em branco
 TRABALHO_INVALIDO= O trabalho enviado está inválido
+TRABALHO_ENVIADO = Trabalho cadastrado com sucesso no sistema
+TRABALHO_NAO_EXISTE = O Trabalho requisitado não foi encontrado
+TRABALHO_REVISADO = O Trabalho foi revisado com sucesso
 ARQUIVO_VAZIO= Não há nada no armazenamento
 FALHA_AO_LER_ARQUIVO = Houve falha na leitura do arquivo
 FORMATO_ARQUIVO_INVALIDO = O arquivo enviado deve ser .pdf
-TRABALHO_ENVIADO = Trabalho cadastrado com sucesso no sistema
 PESSOA_INVALIDA = Pessoa não cadastrada no sistema
 CAMPOS_VAZIOS = Há campos referente ao orientador vazio
 EMAIL_NULL = O campo email não foi preenchido
@@ -39,3 +41,4 @@ ERRO_CADASTRO_TRABALHO = Não foi possível cadastrar o trabalho tente novamente
 FORA_DA_DATA_DE_SUBMISSAO = Voce está enviando um arquivo fora do prazo de submissao
 NAO_HA_TRABALHOS=Não há trabalhos submetidos em nenhum evento
 SESSAO_EXPIRADA=Desculpe, sua sessão expirou
+CRITERIOS_REVISAO_VAZIO=Há critérios não selecionados 
