--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -11,9 +11,9 @@ EVENTO_CADASTRADO_COM_SUCESSO=Evento cadastrado com sucesso
 EVENTO_EDITADO_COM_SUCESSO=Evento editado com sucesso
 ERRO_NAS_DATAS=Datas informadas com erro
 EVENTO_DESCRICAO_ERRO=Campos Descricao é obrigatório
-TRILHA_NOME_JA_EXISTE="Essa trilha já existe"
-PARTICIPAR_EVENTO_INATIVO_OU_FINALIZADO=Nao e permitido participar de um evento inativo ou finalizado
-CONVIDAR_EVENTO_INATIVO=Nao e permitido convidar para um evento inativo
+TRILHA_NOME_JA_EXISTE=Essa trilha já existe
+PARTICIPAR_EVENTO_INATIVO_OU_FINALIZADO=Não e permitido participar de um evento inativo ou finalizado
+CONVIDAR_EVENTO_INATIVO=Não e permitido convidar para um evento inativo
 EVENTO_DESCRICAO_ERRO=Campos Descricao é obrigatório
 PARTICIPAR_EVENTO_INATIVO=Nao e permitido participar de um evento inativo
 PARTICAPAR_EVENTO_SUCESSO=Sua participacao foi efetivada
@@ -45,3 +45,5 @@ SESSAO_EXPIRADA=Desculpe, sua sessão expirou
 TRABALHO_EXCLUIDO_COM_SUCESSO=Trabalho excluido com sucesso
 ERRO_EXCLUIR_TRABALHO = Não foi possivel excluir o trabalho
 FORA_DO_PRAZO_SUBMISSAO = O trabalho so pode ser excluido se estiver dentro do prazo de submissão
+TITULO_EMAIL_CONVITE_ORGANIZADOR=Não Responder este email - Convite CONTEST para evento
+TEXTO_EMAIL_CONVITE_ORGANIZADOR=, você foi convidado para participar do evento
