--- a/aplicacao/contest/src/main/resources/application.properties
+++ b/aplicacao/contest/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.messages.basename=ValidationMessages
 spring.messages.cache-seconds=-1
 spring.messages.encoding=UTF-8
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=200.129.38.134
 spring.mail.port=587
 spring.mail.username=test
 spring.mail.password=test
