--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -30,6 +30,7 @@ TRABALHO_INVALIDO= O trabalho enviado está inválido
 TRABALHO_ENVIADO = Trabalho cadastrado com sucesso no sistema
 TRABALHO_NAO_EXISTE = O Trabalho requisitado não foi encontrado
 TRABALHO_REVISADO = O Trabalho foi revisado com sucesso
+TRABALHO_NAO_ENCONTRADO = O Trabalho requisitado não foi encontrado
 ARQUIVO_VAZIO= Não há nada no armazenamento
 FALHA_AO_LER_ARQUIVO = Houve falha na leitura do arquivo
 FORMATO_ARQUIVO_INVALIDO = O arquivo enviado deve ser .pdf
