--- a/aplicacao/contest/src/main/resources/application.properties
+++ b/aplicacao/contest/src/main/resources/application.properties
@@ -1,19 +1,23 @@
-#debug=true
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/contest
+spring.datasource.url=jdbc:postgresql://homologacaopostgres.quixada.ufc.br/contest
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=!@homologacao#sistemas!@
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.database.driverClassName=org.postgresql.Driver
 
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
+#ldap.url=ldap://172.18.0.15:389
+#ldap.base=dc=quixada,dc=ufc,dc=br
+#ldap.user=cn=admin_npi,ou=people_teste,dc=quixada,dc=ufc,dc=br
+#ldap.password=!@admin_npi!@
+#ldap.ou=ou=people_teste
+
 ldap.url=ldap://172.18.0.15:389
 ldap.base=dc=quixada,dc=ufc,dc=br
-ldap.user=cn=admin_npi,ou=people_teste,dc=quixada,dc=ufc,dc=br
-ldap.password=!@admin_npi!@
-ldap.ou=ou=people_teste
+ldap.user=cn=leitor-npi,dc=quixada,dc=ufc,dc=br
+ldap.password=!@leitor_ldap!@
+ldap.ou=ou=people
 
 spring.messages.basename=ValidationMessages
 spring.messages.cache-seconds=-1
