Criação da requisição ajax para o controlador.

--- a/aplicacao/contest/src/main/resources/application.properties
+++ b/aplicacao/contest/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.messages.encoding=UTF-8
 multipart.maxFileSize= 5Mb
 spring.http.multipart.max-file-size=5Mb 
 spring.http.multipart.max-request-size=5Mb
+
+security.enable-csrf=true
