--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -43,7 +43,7 @@ ERRO_CADASTRO_TRABALHO = Não foi possível cadastrar o trabalho tente novamente
 FORA_DA_DATA_DE_SUBMISSAO = Voce está enviando um arquivo fora do prazo de submissao
 NAO_HA_TRABALHOS=Não há trabalhos submetidos em nenhum evento
 SESSAO_EXPIRADA=Desculpe, sua sessão expirou
-CRITERIOS_REVISAO_VAZIO=Há critérios não selecionados 
+CRITERIOS_REVISAO_VAZIO=Selecione todos os critérios obrigatórios 
 TRABALHO_EXCLUIDO_COM_SUCESSO=Trabalho excluido com sucesso
 ERRO_EXCLUIR_TRABALHO = Não foi possivel excluir o trabalho
 FORA_DO_PRAZO_SUBMISSAO = O trabalho so pode ser excluido se estiver dentro do prazo de submissão
