--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -29,7 +29,7 @@ NOME_DO_TRABALHO_VAZIO=O titulo do trabalho está em branco
 TRABALHO_INVALIDO= O trabalho enviado está inválido
 ARQUIVO_VAZIO= Não há nada no armazenamento
 FALHA_AO_LER_ARQUIVO = Houve falha na leitura do arquivo
-FORMATO_ARQUIVO_INVALIDO = O arquivo enviado deve ser .pdf e não vazio
+FORMATO_ARQUIVO_INVALIDO = O arquivo enviado deve ser .pdf
 TRABALHO_ENVIADO = Trabalho cadastrado com sucesso no sistema
 PESSOA_INVALIDA = Pessoa não cadastrada no sistema
 CAMPOS_VAZIOS = Há campos vazios no formulário
