--- a/aplicacao/contest/src/main/resources/application-sample.properties
+++ b/aplicacao/contest/src/main/resources/application-sample.properties
@@ -22,3 +22,8 @@ spring.messages.encoding=UTF-8
 multipart.maxFileSize= 5Mb
 spring.http.multipart.max-file-size=5Mb 
 spring.http.multipart.max-request-size=5Mb
+
+spring.mail.host=#ip servidor ufc
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.username=CONTEST
