--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -50,3 +50,4 @@ FORA_DO_PRAZO_SUBMISSAO = O trabalho so pode ser excluido se estiver dentro do p
 TRILHA_ADD_COM_SUCESSO = Trilha adicionada com sucesso
 ERRO_TRABALHO_EVENTO = Trabalho ou evento não existe
 ERRO_REENVIAR = Erro durante reenvio
+REVISAO_INEXISTENTE = Não existe revisão para esse trabalho
