Atualizando o pom para utilizar o flyway via maven

--- a/aplicacao/contest/pom.xml
+++ b/aplicacao/contest/pom.xml
@@ -184,6 +184,7 @@
 			<plugin>
 				<groupId>org.flywaydb</groupId>
 				<artifactId>flyway-maven-plugin</artifactId>
+				<version>${flyway.version}</version>
 				<configuration>
 					<url>${url.db}</url>
 					<user>${user.db}</user>
