Adicionando verificação se o usuário é o autor do trabalho

--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -51,3 +51,4 @@ TRILHA_ADD_COM_SUCESSO = Trilha adicionada com sucesso
 ERRO_TRABALHO_EVENTO = Trabalho ou evento não existe
 ERRO_REENVIAR = Erro durante reenvio
 FORA_PERIODO_REVISAO=Não estamos no período de revisão
+AUTOR_SEM_PERMISSAO=Voce não possui permissão para remover este trabalho
