1#	Verificacao se o usuário logado é um organizador. 2#	Remocao de código que já está incluído no footer. 3#	RevisorController - Alteração de chamada de método estático (recomendação do editor).

--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -52,3 +52,4 @@ TRILHA_ADD_COM_SUCESSO = Trilha adicionada com sucesso
 ERRO_TRABALHO_EVENTO = Trabalho ou evento não existe
 ERRO_REENVIAR = Erro durante reenvio
 REVISAO_INEXISTENTE = Não existe revisão para esse trabalho
+NAO_ORGANIZADOR = É preciso ser organizador para usar deste serviço
