Adicionando perfis do maven para gerar build para cada tipo de ambiente

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ aplicacao/contest/.mvn
 aplicacao/contest/mvnw*
 
 aplicacao/contest/src/main/resources/application.properties
+aplicacao/contest/src/main/resources/application-homologacao.properties
+aplicacao/contest/src/main/resources/application-producao.properties
 
 *.bak
 *.log
