--- a/aplicacao/contest/pom.xml
+++ b/aplicacao/contest/pom.xml
@@ -228,7 +228,11 @@
 	    </dependency>
 		
 		
-		
+		<dependency>
+    		<groupId>org.jopendocument</groupId>
+    		<artifactId>jOpenDocument</artifactId>
+    		<version>1.3</version>
+		</dependency>
 		
 	</dependencies>
 
