--- a/aplicacao/contest/pom.xml
+++ b/aplicacao/contest/pom.xml
@@ -65,6 +65,9 @@
 		<materialize.version>0.97.6</materialize.version>
 		<font.awesome.version>4.6.3</font.awesome.version>
 		<jquery.version>2.2.4</jquery.version>
+		
+		<!-- NPI Mail Version -->
+		<npi.mail.version>1.0.0</npi.mail.version>
 
 		
 	</properties>
@@ -233,6 +236,13 @@
     		<artifactId>jOpenDocument</artifactId>
     		<version>1.3</version>
 		</dependency>
+		
+		<!-- NPI Mail -->
+		  <dependency>
+		    <groupId>br.ufc.quixada.npi</groupId>
+		    <artifactId>npi-mail</artifactId>
+		    <version>${npi.mail.version}</version>
+		  </dependency>
 		
 	</dependencies>
 
