Configuracao de cobertura de testes

--- a/aplicacao/contest/sonar-project.properties
+++ b/aplicacao/contest/sonar-project.properties
@@ -8,7 +8,10 @@ sonar.projectName=Contest
 # Since SonarQube 4.2, this property is optional if sonar.modules is set. 
 # If not set, SonarQube starts looking for source code from the directory containing 
 # the sonar-project.properties file.
- sonar.sources=src/
+sonar.sources=src/main/java
+sonar.tests=src/test/java
+
+sonar.jacoco.reportPath=target/jacoco.exec
   
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
