--- a/aplicacao/contest/pom.xml
+++ b/aplicacao/contest/pom.xml
@@ -26,7 +26,7 @@
 				<packaging.type>war</packaging.type>
 				<npi.ldap.version>0.3</npi.ldap.version>
 				<activatedProperties>homologacao</activatedProperties>
-				
+
 			</properties>
 		</profile>
 		<profile>
@@ -67,7 +67,7 @@
 		<materialize.version>0.97.6</materialize.version>
 		<font.awesome.version>4.6.3</font.awesome.version>
 		<jquery.version>2.2.4</jquery.version>
-		
+
 		<!-- NPI Mail Version -->
 		<npi.mail.version>1.0.0</npi.mail.version>
 
@@ -104,33 +104,39 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-				<dependency>
+
+    	<dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-core</artifactId>
             <version>${cucumber.java.version}</version>
             <scope>test</scope>
-        </dependency> 
-		
+        </dependency>
+
 		<dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>${cucumber.java.version}</version>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-junit</artifactId>
             <version>${cucumber.java.version}</version>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
               <groupId>info.cukes</groupId>
               <artifactId>cucumber-spring</artifactId>
               <version>${cucumber.java.version}</version>
               <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.7.9</version>
         </dependency>
 
 		<!-- Database Dependencies -->
@@ -160,7 +166,7 @@
 			<artifactId>npi-ldap</artifactId>
 			<version>${npi.ldap.version}</version>
 		</dependency>
-		
+
 		<!-- Webjars -->
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
@@ -206,9 +212,9 @@
 		    <artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
-		
-		
-		
+
+
+
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
@@ -224,14 +230,14 @@
 			<artifactId>telnetd-x</artifactId>
 			<version>2.1.1</version>
 		</dependency>
-		
+
 		<!-- JSON -->
 		<dependency>
     		<groupId>org.json</groupId>
    			<artifactId>json</artifactId>
     		<version>20160810</version>
 		</dependency>
-		
+
 		<!-- JASPER REPORTS -->
         <dependency>
             <groupId>net.sf.jasperreports</groupId>
@@ -248,13 +254,13 @@
 	        <version>${spring.version}</version>
 	    </dependency>
 
-		
+
 		<dependency>
     		<groupId>org.jopendocument</groupId>
     		<artifactId>jOpenDocument</artifactId>
     		<version>1.3</version>
 		</dependency>
-		
+
 		<!-- NPI Mail -->
 		  <dependency>
 		    <groupId>br.ufc.quixada.npi</groupId>
@@ -262,7 +268,7 @@
 		    <version>${npi.mail.version}</version>
 		  </dependency>
 
-		
+
 	</dependencies>
 
 	<build>
@@ -283,7 +289,28 @@
 					<baselineOnMigrate>true</baselineOnMigrate>
 					<!-- Parametros Default - https://flywaydb.org/documentation/maven/migrate -->
 				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.7.9</version>
+                    <executions>
+                        <execution>
+                            <id>default-prepare-agent</id>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>default-report</id>
+                            <phase>prepare-package</phase>
+                            <goals>
+                                <goal>report</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
