--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ aplicacao/contest/.springBeans
 aplicacao/contest/.mvn
 aplicacao/contest/mvnw*
 
-aplicacao/contest/src/main/resources/application.properties
+application.properties
 aplicacao/contest/src/main/resources/application-homologacao.properties
 aplicacao/contest/src/main/resources/application-producao.properties
 
