--- a/aplicacao/contest/src/main/resources/application.properties
+++ b/aplicacao/contest/src/main/resources/application.properties
@@ -25,6 +25,6 @@ spring.http.multipart.max-request-size=5Mb
 
 spring.profiles.active=@activatedProperties@
 
-#spring.mail.host=host
-#spring.mail.protocol=smtp
-#spring.mail.port=587
+spring.mail.host=host
+spring.mail.protocol=smtp
+spring.mail.port=587
