--- a/aplicacao/contest/src/main/resources/application.properties
+++ b/aplicacao/contest/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.http.multipart.max-request-size=5Mb
 
 spring.profiles.active=@activatedProperties@
 
-spring.mail.host=host
+spring.mail.host=independencia.quixada.ufc.br
 spring.mail.protocol=smtp
 spring.mail.port=587
+spring.mail.properties.mail.mime.multipart.allowempty=truespring.mail.properties.mail.smtp.connecttimeout=5000 
+spring.mail.properties.mail.smtp.timeout=3000 
+spring.mail.properties.mail.smtp.writetimeout=5000
