--- a/aplicacao/contest/sonar-project.properties
+++ b/aplicacao/contest/sonar-project.properties
@@ -2,7 +2,7 @@
 sonar.projectKey=contest:project
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=Contest
-#sonar.projectVersion=1.0
+sonar.projectVersion=0.9-beta.15
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # Since SonarQube 4.2, this property is optional if sonar.modules is set. 
