--- a/aplicacao/contest/sonar-project.properties
+++ b/aplicacao/contest/sonar-project.properties
@@ -10,6 +10,7 @@ sonar.projectVersion=0.9-beta.15
 # the sonar-project.properties file.
 sonar.sources=src/main/java
 sonar.tests=src/test/java
+sonar.java.binaries=target/classes
 
 sonar.jacoco.reportPath=target/jacoco.exec
   
