--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -61,4 +61,4 @@ TITULO_EMAIL_CONVITE_ORGANIZADOR=Convite CONTEST para evento
 TEXTO_EMAIL_CONVITE_ORGANIZADOR=, vocÃª recebeu um convite para participar do evento
 EMAIL_ENVIADO_SUCESSO=Seu e-mail foi enviado com sucesso 
 TEXTO_EMAIL_CONVITE_ORGANIZADOR=, vocÃª recebeu um convite para participar do evento 
- TEXTO_EMAIL_CONFIRMACAO= . Fique atento aos prazos, o próximo passo será a fase das revisões, confira no edital os prazos. Boa sorte! 
+ASSUNTO_EMAIL_CONFIRMACAO= Email confirmando o envio do trabalho 
