--- a/aplicacao/contest/src/main/resources/application.properties
+++ b/aplicacao/contest/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.profiles.active=@activatedProperties@
+app.name=@artifactId@
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.database.driverClassName=org.postgresql.Driver
 
-spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
 
 spring.messages.basename=ValidationMessages
 spring.messages.cache-seconds=-1
