Mudando mensagem de reenvio de trabalhos para autores

--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -62,3 +62,4 @@ TEXTO_EMAIL_CONVITE_ORGANIZADOR=, você recebeu um convite para participar do ev
 EMAIL_ENVIADO_SUCESSO=Seu e-mail foi enviado com sucesso 
 TEXTO_EMAIL_CONVITE_ORGANIZADOR=, você recebeu um convite para participar do evento 
 ASSUNTO_EMAIL_CONFIRMACAO= Email confirmando o envio do trabalho 
+ASSUNTO_EMAIL_CONFIRMACAO_REENVIO= Email confirmando o reenvio do trabalho 
