Removendo verificação de período de revisão
closes #418

--- a/aplicacao/contest/src/main/resources/ValidationMessages.properties
+++ b/aplicacao/contest/src/main/resources/ValidationMessages.properties
@@ -63,3 +63,4 @@ EMAIL_ENVIADO_SUCESSO=Seu e-mail foi enviado com sucesso
 TEXTO_EMAIL_CONVITE_ORGANIZADOR=, vocÃª recebeu um convite para participar do evento 
 ASSUNTO_EMAIL_CONFIRMACAO= Email confirmando o envio do trabalho 
 ASSUNTO_EMAIL_CONFIRMACAO_REENVIO= Email confirmando o reenvio do trabalho 
+NAO_HA_REVISAO=Não há revisões disponíveis
